Creating scripts to run locally

--- a/notebooks/locally_notebook.ipynb
+++ b/notebooks/locally_notebook.ipynb
@@ -42,6 +42,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "96f6e5b4",
+   "metadata": {},
+   "source": [
+    "pip install --upgrade -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "94e50e42",
    "metadata": {},
    "source": [
@@ -61,7 +69,15 @@
    "id": "aab6e0b5",
    "metadata": {},
    "source": [
-    "gsutil -q -m cp gs://magentadata/soundfonts/SGM-v2.01-Sal-Guit-Bass-V1.3.sf2 ."
+    "cd mt3 && gsutil -q -m cp gs://magentadata/soundfonts/SGM-v2.01-Sal-Guit-Bass-V1.3.sf2 ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52108733",
+   "metadata": {},
+   "source": [
+    "cd mt3 && pip -e ."
    ]
   },
   {
